--- a/templates/monitoring.html
+++ b/templates/monitoring.html
@@ -445,6 +445,7 @@
                 <li><a href="/home">Home</a></li>
                 <li><a href="/prediction">Predictions</a></li>
                 <li><a href="/monitoring">Monitoring</a></li>
+                <li><a href="/heatmap">Heatmap</a></li>
                 <li><a href="/home#about">About</a></li>
                 <li><a href="/home#contact">Contact</a></li>
             </ul>
