adding fuel and lane img detection

--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -574,6 +574,8 @@
                 <li><a href="/monitoring">Monitoring</a></li>
                 <li><a href="/events">Events</a></li>
                 <li><a href="/heatmap" class="active">Heatmap</a></li>
+                <li><a href="/signalguiding">Signal Guiding</a></li>
+                <li><a href="/petrolpump">Fuel Queue</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="nav-auth">
