--- a/templates/monitoring.html
+++ b/templates/monitoring.html
@@ -444,10 +444,13 @@
             <ul class="nav-links">
                 <li><a href="/home">Home</a></li>
                 <li><a href="/prediction">Predictions</a></li>
-                <li><a href="/monitoring">Monitoring</a></li>
+                <li><a href="/route-risk-analysis">Risk Analysis</a></li>
+                <li><a href="/monitoring" class="active">Monitoring</a></li>
+                <li><a href="/events">Events</a></li>
                 <li><a href="/heatmap">Heatmap</a></li>
-                <li><a href="/home#about">About</a></li>
-                <li><a href="/home#contact">Contact</a></li>
+                <li><a href="/signalguiding">Signal Guiding</a></li>
+                <li><a href="/petrolpump">Fuel Queue</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="nav-auth">
                 <a href="/auth" class="btn-outline">
