fixing minor issues

--- a/templates/events.html
+++ b/templates/events.html
@@ -503,10 +503,10 @@
                     🏠 Back to Home
                 </a>
                 <a href="/prediction" class="btn-event">
-                    🚗 Check Route Impact
+                    Check Route Impact
                 </a>
                 <a href="/monitoring" class="btn-event">
-                    📊 Live Monitoring
+                    Live Monitoring
                 </a>
             </div>
         </div>
