--- a/templates/petrolpump.html
+++ b/templates/petrolpump.html
@@ -580,7 +580,7 @@
                             <div class="upload-section-pump">
                                 <label for="file-01" class="upload-area" id="upload-01">
                                     <div class="upload-content">
-                                        <div class="upload-icon">📸</div>
+                                        <div class="upload-icon">⬆</div>
                                         <p class="upload-text">Click to upload image</p>
                                         <p class="upload-subtext">PNG, JPG up to 10MB</p>
                                     </div>
@@ -623,7 +623,7 @@
                             <div class="upload-section-pump">
                                 <label for="file-02" class="upload-area" id="upload-02">
                                     <div class="upload-content">
-                                        <div class="upload-icon">📸</div>
+                                        <div class="upload-icon">⬆</div>
                                         <p class="upload-text">Click to upload image</p>
                                         <p class="upload-subtext">PNG, JPG up to 10MB</p>
                                     </div>
@@ -714,7 +714,7 @@
             <span class="notification-message"></span>
         </div>
     </div>
-
+ 
     <!-- Link to external JavaScript file -->
     <script src="{{ url_for('static', filename='js/fuel.js') }}"></script>
 </body>
