--- a/templates/route_map.html
+++ b/templates/route_map.html
@@ -365,7 +365,7 @@
                 </a>
                 <div class="header-divider"></div>
                 <h1 class="header-title">
-                    🗺️ Route Map
+                    Route Map
                 </h1>
             </div>
             <div class="header-right">
